# agno-insiders-app

./: .gitignore  README.md  main.py  pyproject.toml
agents/: report_analyze_agent.py  report_search_agent.py  summarization_agent.py  validation_agent.py
db/: driver.py
exceptions/: exceptions.py
models/: report.py  report_results.py  report_url.py
prompts/: report_analyze_agent_prompt.py  report_search_agent_prompt.py  summarization_agent_prompt.py  validation_agent_prompt.py
results/: brembo_insiders_20250724_162504.json  leonardo_s.p.a._insiders_20250724_113824.json
results/v2/: brembo_insiders_20250812_161433.json  enel_insiders_20250819_110843.json  eni_insiders_20250819_112752.json  intesa_sanpaolo_insiders_20250819_114004.json  leonardo_insiders_20250812_160035.json  leonardo_insiders_20250826_150721.json
results/v3/: a2a_insiders_20250830_103607.json  a2a_insiders_20250830_112212.json  a2a_insiders_20250901_114029.json  banca_mediolanum_insiders_20250830_124953.json  leonardo_insiders_20250826_163137.json  leonardo_insiders_20250830_152124.json  leonardo_s.p.a._insiders_20250827_161127.json  leonardo_s.p.a._insiders_20250828_160320.json  leonardo_s.p.a._insiders_20250828_164211.json  leonardo_s.p.a._insiders_20250828_165751.json  leonardo_s.p.a._insiders_20250829_103839.json  leonardo_s.p.a._insiders_20250829_105718.json  leonardo_s.p.a._insiders_20250829_110817.json  leonardo_s.p.a._insiders_20250829_121430.json  (+2 more)
src/: main.py
src/tools/: crawl.py  (+1 more)
tools/: crawl.py  pdf.py
workflows/: insiders_workflow.py  insiders_workflow_v2.py  temp.py
(+15 files in other folders)
