[project]
name = "agno-insiders-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.5",
    "crawl4ai>=0.7.1",
    "google-genai>=1.26.0",
    "googlesearch-python>=1.3.0",
    "neo4j>=5.28.2",
    "pdfplumber>=0.11.7",
    "playwright>=1.53.0",
    "pycountry>=24.6.1",
    "pypdf2>=3.0.1",
    "python-levenshtein>=0.27.1",
    "thefuzz>=0.22.1",
    "unstructured[docx,pdf]>=0.18.13",
]
